# decade

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  ranking.md
.github/workflows/: pipeline.yml
configs/: benchmarks.yaml  pipeline.yaml  scoring.yaml  universe.yaml
docs/: data_contracts.md  decisions.md  methodology.md  overview.md  scaling.md
src/fund_rank/: __init__.py  cli.py  settings.py
src/fund_rank/bronze/: _common.py  ingest_anbima_175.py  ingest_anbima_indices.py  ingest_bcb_indices.py  ingest_cad_fi.py  ingest_cad_fi_hist.py  ingest_cda.py  ingest_cdi.py  ingest_inf_diario.py  ingest_registro_classe.py  manifest.py
src/fund_rank/contracts/: cad_fi.py  cda.py  class_funds.py  gold.py  inf_diario.py  registro_classe.py  subclass_funds.py
src/fund_rank/flows/: daily_ingest.py  weekly_rank.py
src/fund_rank/gold/: _benchmark_returns.py  _io.py  _metrics.py  _scoring.py  benchmarks.py  build_fund_metrics.py  build_ranking.py  build_ranking_report.py  build_validacao.py  compute_metrics.py
src/fund_rank/obs/: logging.py
src/fund_rank/rank/: report.py  score.py
src/fund_rank/silver/: _benchmark_mapping.py  _fixed_income_filter.py  (+14 more)
tests/integration/: test_pipeline_layers.py
tests/unit/: test_benchmark_mapping.py  test_class_funds.py  test_cnpj_clean_expr.py  test_gold_metrics.py  test_gold_scoring.py  test_index_url_builders.py  test_quota_series.py  test_returns.py  test_score.py  test_settings.py  test_subclass_funds.py  test_taxa_imputation.py  test_text_normalization.py  test_universe_segmentation.py  test_url_builders.py
(+9 files in other folders)
